# craton-dashboard

./: .eslintrc  .gitignore  .gitreview  .travis.yml  .zuul.yaml  AUTHORS  ChangeLog  MANIFEST.in  README.md  README.rst  karma.conf.js  manage.py  package.json  requirements.txt  run_test.sh  setup.cfg  setup.py  test-requirements.txt  test.txt  tox.ini
api_tests/: craton_tests.py
craton_dashboard/: dashboard.py
craton_dashboard/api/: __init__.py  craton.py
craton_dashboard/api/rest/: __init__.py  craton.py
craton_dashboard/content/fleet_management/inventory/: __init__.py  panel.py  urls.py  views.py
craton_dashboard/content/fleet_management/taskflows/: panel.py  urls.py  views.py
craton_dashboard/dashboards/project/fleet/: __init__.py  panel.py  urls.py  views.py
craton_dashboard/dashboards/project/fleet/alerts/: panel.py  urls.py  views.py
craton_dashboard/enabled/: _1710_fleet_panel_group.py  _1720_fleet_regions_panel.py  _1720_fleet_taskflows_panel.py  _1730_fleet_inventory_panel.py  _1730_fleet_taskflows_panel.py  _1740_fleet_alerts_panel.py  _1750_fleet_auditor_panel.py  _1760_fleet_reporting_panel.py  _1770_fleet_inventory_panel.py  _4000_fleet_management.py  _4020_fleet_inventory_panel.py  _4020_fleet_taskflows_panel.py
craton_dashboard/test/: helpers.py  settings.py  urls.py
craton_dashboard/test/api_tests/: craton_tests.py
craton_dashboard/test/test_data/: craton_data.py  keystone_data.py  utils.py
craton_dashboard/tests/: test_dummy.py
craton_ui.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
doc/source/: conf.py
tools/: install_venv.py  pip_install.sh
(+36 files in other folders)
