[metadata]
name = craton-ui 
summary = The Craton UI for Horizon Dashboard
description-file =
    README.rst
author = OSIC 
author_email = eddie.ramirez@intel.com
home-page = http://www.openstack.org/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages = 
    craton_dashboard
